--- a/Tribute Page/index.html
+++ b/Tribute Page/index.html
@@ -13,7 +13,7 @@
         <h1 id="title">Sylvester: The Talking Cat</h1>
         <div id="img-div">
             <figure>
-                <img src="https://static.wikia.nocookie.net/talking-kitty-cat/images/5/5c/Sylvester_the_Talking_Kitty.jpg/revision/latest?cb=20180509200535"
+                <img src='https://static.wikia.nocookie.net/talking-kitty-cat/images/5/5c/Sylvester_the_Talking_Kitty.jpg/revision/latest?cb=20180509200535'
                 alt="" id="image">
                 <figcaption id="img-caption">
                    Sylvester Cash of
