--- a/Cafe Menu/index.html
+++ b/Cafe Menu/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -10,7 +9,7 @@
   <body>
     <div class="menu">
       <main>
-        <h1>CAMPER CAFE HELLO</h1>
+        <h1>CAMPER CAFE HELLO CHANGE FROM DEVELOPEMNT</h1>
         <p class="established">Est. 2020</p>
         <hr>
         <section>
